# online_course_platform

./: .env.database  README.md  docker-compose.yml  pyproject.toml
backend/: .env.local  db.sqlite3
backend/backend/: settings.py  urls.py
backend/courses/: admin.py  models.py  serializers.py  urls.py  views.py
backend/courses/migrations/: 0001_initial.py
backend/custom_auth/: admin.py  authentication.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/custom_auth/migrations/: 0001_initial.py  0002_alter_customuser_patronymic.py
backend/custom_rbac/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/custom_rbac/migrations/: 0001_initial.py  0002_businesselement_alter_role_name_accessrolesrule.py  0003_alter_role_name.py
backend/fixtures/: data.json
